# SIMDWrap

./: .gitignore  CMakeLists.txt  SIMDWrap.sln
SIMDWrap/: Imaging.cpp  Imaging.h  ReadMe.txt  SIMD.h  SIMD.hpp  SIMDWrap.cpp  SIMDWrap.sln  SIMDWrap.vcxproj  SIMDWrap.vcxproj.filters  SIMD_AVX.h  SIMD_AVX.hpp  SIMD_Constants.h  SIMD_Geometric.h  SIMD_Geometric.hpp  SIMD_Math.h  SIMD_Math.hpp  SIMD_Matrices.h  SIMD_Matrices.hpp  SIMD_Noise.cpp  SIMD_Noise.h  SIMD_SSE.h  SIMD_SSE.hpp  SIMD_Terrain.h  SIMDv.h  SIMDv.hpp  stdafx.cpp  stdafx.h
include/: simd_traits.hpp  storage_proxy.hpp  vector.hpp  vector.inl
include/detail/: base_expressions.hpp  binary_operators.hpp  expr_helpers.hpp  simd_traits.hpp
old_srcs/: SIMD_AVX.hpp  SIMD_Math.hpp  SIMD_Matrices.hpp
